@@ -1,8 +1,5 @@
- 
+
  This script tests redeployment of plans in 'normal' (i.e. non-failure)
  situations.
  The script tests the plans from the ExecutionManager-Deployment directory.
- 
- As of this moment (2010-03-25) the components used in several of the plans 
- seem to have problems with the new asynchronous deployment.
- 
+
