@@ -1,3 +1,13 @@
+Mon Jul 05 14:35:30 UTC 2010  Martin Corino  <mcorino@remedy.nl>
+
+        * DAnCE/tests/CIAO/ExecutionManager-Deployments/run_test.pl:
+        * DAnCE/tests/CIAO/EM-Launch-Failures/run_test.pl:
+        * DAnCE/tests/CIAO/EM-Redeployment/run_test.pl:
+	  Standardized scripts. Proper use of targets.
+
+        * DAnCE/tests/CIAO/EM-Redeployment/README.txt:
+	  Removed outdated comment.
+
 Mon Jul  5 14:02:19 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * etc/ciao.doxygen:
